@@ -334,7 +334,7 @@ xmltv_parse_programme_tags(xmltv_channel_t *xc, htsmsg_t *tags,
   const char *desc  = xmltv_get_cdata_by_tag(tags, "desc");
 
   LIST_FOREACH(ch, &xc->xc_channels, ch_xc_link) {
-    if((e = epg_event_create(ch, start, stop)) == NULL)
+    if((e = epg_event_create(ch, start, stop, -1)) == NULL)
       continue;
 
     if(title != NULL) epg_event_set_title(e, title);
